GNOME Bugzilla – Bug 688279
simple-slave: Don't create/destroy the initial-setup user
Last modified: 2012-11-14 18:15:49 UTC
We decided this was a bad idea, and it breaks SELinux as well. The gnome-initial-setup package will install such a user.
Created attachment 228924 [details] [review] simple-slave: Don't create/destroy the initial-setup user We'll have a static user from here on out.
Review of attachment 228924 [details] [review]: looks mostly okay. one thing: ::: daemon/gdm-simple-slave.c @@ -1251,3 @@ - } - - if (g_remove (INITIAL_SETUP_TRIGGER_FILE) < 0) { Doesn't this still need to get called?
(In reply to comment #2) > Review of attachment 228924 [details] [review]: > > looks mostly okay. one thing: > > ::: daemon/gdm-simple-slave.c > @@ -1251,3 @@ > - } > - > - if (g_remove (INITIAL_SETUP_TRIGGER_FILE) < 0) { > > Doesn't this still need to get called? I wonder if gdm should be the one to remove the trigger file...
could go either way I guess, though, the more decoupled we can keep gdm and gnome-initial-setup, the cleaner the architecture will be, I suppose.
Attachment 228924 [details] pushed as 567f055 - simple-slave: Don't create/destroy the initial-setup user I added such a capability to gnome-initial-setup, so I'm removing the trigger file there.