simple-slave: Don't create/destroy the initial-setup user

We'll have a static user from here on out.

https://bugzilla.gnome.org/show_bug.cgi?id=688279